# MorphoPy

./: .gitattributes  .gitignore  .travis.yml  Creating density maps.ipynb  LICENSE  MorphoPy  MorphoPy tutorial.ipynb  MorphoPy.py  MorphoPyGUI  README.md  morphopy.bib  paper.md  pyproject.toml  requirements.txt  setup.py
about/: __init__.py
computation/: feature_presentation.py  file_manager.py  persistence_functions.py
data/: C4.swc  EC3-60126.CNG.swc  EC3-80604.CNG.rotated.swc  EC3-80604.CNG.swc  L1_test_cell.swc  L5_Interneurons_01_28_2019_sample_12(fede).swc  L5_Interneurons_01_28_2019_sample_short.swc  NGFC_151130_1 - Rotated.swc  V1_Layer23_Chat-IRES-Cre-neo_Ai14-299537.04.02.01_614430666_m.swc  density.conf  sample_doublet_point.swc  sample_no_root.swc  sample_three_soma_points.swc  sm090918b1-3_idA_-_Scale_x1.000_y1.025_z1.000_commata_in_swc.swc  test_neuron2.swc  test_neuron_disconnected.swc  test_neuron_undefined_type.swc
docs/: command.rst  computation.rst  conf.py  feature_presentation.rst  file_manager.rst  index.rst  morphopy.rst  neuron.rst  neurontree.rst  persistence_functions.rst  plotting.rst  utils.rst
gui/: NTMain.py  neuron_tree.xbm
html_doc/: MorphoPy.html  about.html  computation.feature_presentation.html  computation.file_manager.html  computation.html  computation.persistence_functions.html  neurontree.NeuronTree.html  neurontree.html  neurontree.plotting.html  neurontree.utils.html
morphopy/: MorphoPy.py  __init__.py  _morph.py  _preprocessing.py  _utils.py
morphopy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
neurontree/: NeuronTree.py  plotting.py  utils.py
notebooks/: Compare NeuroM and MorphoPy.ipynb  Compare persistence implementations of TMD with MorphoPy.ipynb  MORPHOPY Test functionality.ipynb  MORPHOPY Tutorial.ipynb
(+69 files in other folders)
