[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "morphopy"
version = "0.7.3"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "matplotlib-scalebar",
    "numpy",
    "scipy",
    "pandas",
    "plotly",
    "networkx",
    "seaborn",
    "scikit-learn",
    "shapely",
    "pytest>=8.3.5",
]

[tool.setuptools.packages.find]
include = ["morphopy*"]
exclude = ["data*", "paper*", "notebooks*"]

