[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "morphopy"
version = "0.7.4"
description = "A Python package for feature extraction of neural morphologies"
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "matplotlib-scalebar",
    "numpy",
    "scipy",
    "pandas",
    "plotly",
    "networkx",
    "seaborn",
    "scikit-learn",
    "shapely",
    "pytest>=8.3.5",
]
license = "MIT"
readme = {file = "README.md", content-type = "text/markdown"}

[tool.setuptools.packages.find]
include = ["morphopy*"]
exclude = ["data*", "paper*", "notebooks*"]

